# espress-idf-conf

./: .gitignore  .gitmodules  README.md  protogen.bat
main/: CMakeLists.txt  Kconfig.projbuild  bt_spp_server.cpp  bt_spp_server.hpp  crypto_ecdh_aes.cpp  crypto_ecdh_aes.hpp  ecdh_aes_protocol.cpp  fd_connection.cpp  fd_connection.hpp  idf_component.yml  joystick_task.cpp  led_blink_task.cpp  main.cpp  message_type.cpp  parameter_store.cpp  parameter_sync.cpp  protocol.hpp  send_delayed.cpp  serial_line_reader.cpp  serial_line_reader.hpp  uptime_task.cpp  utils.cpp
main/protocol/: config_protocol.cpp  config_protocol.hpp  ecdh_aes_protocol.cpp  ecdh_aes_protocol.hpp  passphrase_aes_protocol.cpp  passphrase_aes_protocol.hpp  protocol.hpp  raw_protocol.cpp  raw_protocol.hpp
